Create product-detail.component, router and routerlinks, navigation etc...

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,7 +6,7 @@
     <div class='row'>
       <div class='col-md-2'>Filter by:</div>
       <div class='col-md-4'>
-        <input type='text' [(ngModel)]="listFilter" />
+        <input type='text' [(ngModel)]="listFilter"/>
       </div>
     </div>
     <div class='row'>
@@ -34,7 +34,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor='let product of products'>
+        <tr *ngFor='let product of filteredProducts'>
           <td>
             <img *ngIf='showImage'
                  [src]='product.imageUrl'
@@ -43,12 +43,15 @@
                  [style.margin.px]='imageMargin'>
           </td>
           <td>
-            {{ product.productName }}
+            <a [routerLink]="['/products', product.productId]">{{ product.productName }}</a>
           </td>
           <td>{{ product.productCode | lowercase | convertToSpaces: '-'}}</td>
           <td>{{ product.releaseDate }}</td>
           <td>{{ product.price | currency:'USD':'symbol':'1.2-2'}}</td>
-          <td> {{ product.starRating}}          </td>
+          <td>
+            <pm-star [rating]="product.starRating"
+                     (ratingClicked)="onRatingClicked($event)"></pm-star>
+          </td>
         </tr>
         </tbody>
       </table>
