Created factory function, and validator function, for costum validation in Reactive Forms.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <li><a class="nav-link" [routerLink]="['/welcome']">Home</a></li>
     <li><a class="nav-link" [routerLink]="['/products']">Product List</a></li>
     <li><a class="nav-link" [routerLink]="['/customer']">Customer</a></li>
+    <li><a class="nav-link" [routerLink]="['/demo']">Demo</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
