--- a/src/app/customers/customer.component.html
+++ b/src/app/customers/customer.component.html
@@ -175,95 +175,108 @@
         </div>
       </div>
 
-      <!------------------------------------>
-      <!--      Template Driven Form      -->
-      <!------------------------------------>
-      <!--      <div *ngIf="customer.sendCatalog">-->
-      <!--        <div class="form-group row mb-2">-->
-      <!--          <label class="col-md-2 col-form-label pt-0">Address Type</label>-->
-      <!--          <div class="col-md-8">-->
-      <!--            <div class="form-check form-check-inline">-->
-      <!--              <label class="form-check-label">-->
-      <!--                <input class="form-check-input"-->
-      <!--                       id="addressType1Id"-->
-      <!--                       type="radio"-->
-      <!--                       value="home"> Home-->
-      <!--              </label>-->
-      <!--            </div>-->
-      <!--            <div class="form-check form-check-inline">-->
-      <!--              <label class="form-check-label">-->
-      <!--                <input class="form-check-input"-->
-      <!--                       id="addressType1Id"-->
-      <!--                       type="radio"-->
-      <!--                       value="work"> Work-->
-      <!--              </label>-->
-      <!--            </div>-->
-      <!--            <div class="form-check form-check-inline">-->
-      <!--              <label class="form-check-label">-->
-      <!--                <input class="form-check-input"-->
-      <!--                       id="addressType1Id"-->
-      <!--                       type="radio"-->
-      <!--                       value="other"> Other-->
-      <!--              </label>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--        </div>-->
+      <div *ngIf="customerForm.get('sendCatalog').value">
+        <div formArrayName="addresses"
+             *ngFor="let address of addresses.controls; let i = index">
+          <div [formGroupName]="i">
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label pt-0">Address Type</label>
+              <div class="col-md-8">
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="home"
+                           formControlName="addressType"> Home
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="work"
+                           formControlName="addressType"> Work
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="other"> Other
+                  </label>
+                </div>
+              </div>
+            </div>
 
-      <!--        <div class="form-group row mb-2">-->
-      <!--          <label class="col-md-2 col-form-label"-->
-      <!--                 for="street1Id">Street Address 1</label>-->
-      <!--          <div class="col-md-8">-->
-      <!--            <input class="form-control"-->
-      <!--                   id="street1Id"-->
-      <!--                   type="text">-->
-      <!--          </div>-->
-      <!--        </div>-->
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'street1Id' + i}}">Street Address 1</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="{{'street1Id' + i}}"
+                       type="text">
+              </div>
+            </div>
 
-      <!--        <div class="form-group row mb-2">-->
-      <!--          <label class="col-md-2 col-form-label"-->
-      <!--                 for="street2Id">Street Address 2</label>-->
-      <!--          <div class="col-md-8">-->
-      <!--            <input class="form-control"-->
-      <!--                   id="street2Id"-->
-      <!--                   type="text">-->
-      <!--          </div>-->
-      <!--        </div>-->
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     for="street2Id">Street Address 2</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="street2Id"
+                       type="text">
+              </div>
+            </div>
 
-      <!--        <div class="form-group row mb-2">-->
-      <!--          <label class="col-md-2 col-form-label"-->
-      <!--                 for="cityId">City, State, Zip Code</label>-->
-      <!--          <div class="col-md-3">-->
-      <!--            <input class="form-control"-->
-      <!--                   id="cityId"-->
-      <!--                   type="text">-->
-      <!--          </div>-->
-      <!--          <div class="col-md-3">-->
-      <!--            <select class="form-control"-->
-      <!--                    id="stateId"-->
-      <!--            >-->
-      <!--              <option value=""-->
-      <!--                      disabled-->
-      <!--                      selected-->
-      <!--                      hidden>Select a State...-->
-      <!--              </option>-->
-      <!--              <option value="AL">Alabama</option>-->
-      <!--              <option value="AK">Alaska</option>-->
-      <!--              <option value="AZ">Arizona</option>-->
-      <!--              <option value="AR">Arkansas</option>-->
-      <!--              <option value="CA">California</option>-->
-      <!--              <option value="CO">Colorado</option>-->
-      <!--              <option value="WI">Wisconsin</option>-->
-      <!--              <option value="WY">Wyoming</option>-->
-      <!--            </select>-->
-      <!--          </div>-->
-      <!--          <div class="col-md-2">-->
-      <!--            <input class="form-control"-->
-      <!--                   id="zipId"-->
-      <!--                   type="number">-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </div>-->
-
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     for="cityId">City, State, Zip Code</label>
+              <div class="col-md-3">
+                <input class="form-control"
+                       id="cityId"
+                       type="text">
+              </div>
+              <div class="col-md-3">
+                <select class="form-control"
+                        id="stateId"
+                >
+                  <option value=""
+                          disabled
+                          selected
+                          hidden>Select a State...
+                  </option>
+                  <option value="AL">Alabama</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <input class="form-control"
+                       id="zipId"
+                       type="number">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="form-group row mb-2r">
+          <div class="col-md-4">
+            <button class="btn btn-outline-primary"
+                    type="button"
+                    [disabled]="!addresses.valid"
+                    (click)="addAddress()">
+              Add Another Address
+            </button>
+          </div>
+        </div>
+      </div>
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
           <button class="btn btn-primary mr-3"
@@ -283,3 +296,5 @@
 <br>Touched: {{ customerForm.touched }}
 <br>Valid: {{ customerForm.valid }}
 <br>Value: {{ customerForm.value | json }}
+<br>Street: {{ addresses.get('0.street1')?.value }}
+<br>&nbsp;
