--- a/src/app/customers/customer.component.html
+++ b/src/app/customers/customer.component.html
@@ -17,7 +17,9 @@
                  type="text"
                  placeholder="First Name (required)"
                  formControlName="firstName"
-                 [ngClass]="{'is-invalid': (customerForm.get('firstName').touched || customerForm.get('firstName').dirty) && !customerForm.get('firstName').valid }"/>
+                 [ngClass]="{'is-invalid': (customerForm.get('firstName').touched ||
+                                            customerForm.get('firstName').dirty) &&
+                                            !customerForm.get('firstName').valid }" />
           <span class="invalid-feedback">
             <span *ngIf="customerForm.get('firstName').errors?.required">
               Please enter your first name.
@@ -38,7 +40,9 @@
                  type="text"
                  placeholder="Last Name (required)"
                  formControlName="lastName"
-                 [ngClass]="{'is-invalid': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }"/>
+                 [ngClass]="{'is-invalid': (customerForm.get('lastName').touched ||
+                                            customerForm.get('lastName').dirty) &&
+                                            !customerForm.get('lastName').valid }" />
           <span class="invalid-feedback">
             <span *ngIf="customerForm.get('lastName').errors?.required">
               Please enter your last name.
@@ -59,21 +63,11 @@
                    id="emailId"
                    type="email"
                    placeholder="Email (required)"
-                   required
-                   email
                    formControlName="email"
-                   [ngClass]="{'is-invalid': customerForm.get('emailGroup').errors ||
-                                            ((customerForm.get('emailGroup.email').touched ||
-                                            customerForm.get('emailGroup.email').dirty) &&
-                                            !customerForm.get('emailGroup.email').valid )}"/>
+                   [ngClass]="{'is-invalid': emailMessage }" />
             <span class="invalid-feedback">
-              <span *ngIf="customerForm.get('emailGroup.email').errors?.required">
-                Please enter your email address.
-              </span>
-              <span *ngIf="customerForm.get('emailGroup.email').errors?.email">
-                Please enter a valid email address.
-              </span>
-          </span>
+              {{ emailMessage }}
+            </span>
           </div>
         </div>
 
@@ -85,35 +79,33 @@
                    id="confirmEmailId"
                    type="email"
                    placeholder="Confirm Email (required)"
-                   required
-                   email
                    formControlName="confirmEmail"
                    [ngClass]="{'is-invalid': customerForm.get('emailGroup').errors ||
-                                            ((customerForm.get('emailGroup.confirmEmail').touched ||
-                                            customerForm.get('emailGroup.confirmEmail').dirty) &&
-                                           !customerForm.get('emailGroup.confirmEmail').valid)}"/>
+                                             ((customerForm.get('emailGroup.confirmEmail').touched ||
+                                              customerForm.get('emailGroup.confirmEmail').dirty) &&
+                                              !customerForm.get('emailGroup.confirmEmail').valid) }" />
             <span class="invalid-feedback">
               <span *ngIf="customerForm.get('emailGroup.confirmEmail').errors?.required">
-                Please enter your email address.
+                Please confirm your email address.
               </span>
               <span *ngIf="customerForm.get('emailGroup').errors?.match">
                 The confirmation does not match the email address.
               </span>
-          </span>
+            </span>
           </div>
         </div>
       </div>
 
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
-               for="phoneId">Phone </label>
+               for="phoneId">Phone</label>
         <div class="col-md-8">
           <input class="form-control"
                  id="phoneId"
                  type="tel"
                  placeholder="Phone"
                  formControlName="phone"
-                 [ngClass]="{'is-invalid': !customerForm.get('phone').valid}"/>
+                 [ngClass]="{'is-invalid': !customerForm.get('phone').valid }" />
           <span class="invalid-feedback">
             <span *ngIf="customerForm.get('phone').errors?.required">
               Please enter your phone number.
@@ -123,37 +115,38 @@
       </div>
 
       <div class="form-group row mb-2">
-        <label class="col-md-2 col-form-label pt-0">Send Notifications </label>
+        <label class="col-md-2 col-form-label pt-0">Send Notifications</label>
         <div class="col-md-8">
           <div class="form-check form-check-inline">
             <label class="form-check-label">
-              <input class="form-check-label"
+              <input class="form-check-input"
                      type="radio"
                      value="email"
-                     formControlName="notification"> Email
+                     formControlName="notification">Email
             </label>
           </div>
           <div class="form-check form-check-inline">
             <label class="form-check-label">
-              <input class="form-check-label"
+              <input class="form-check-input"
                      type="radio"
                      value="text"
-                     formControlName="notification"> Text
+                     formControlName="notification">Text
             </label>
           </div>
         </div>
       </div>
 
       <div class="form-group row mb-2">
-        <label for="ratingId"
-               class="col-md-2 col-form-label">Rating</label>
+        <label class="col-md-2 col-form-label"
+               for="ratingId">Rating</label>
         <div class="col-md-8">
           <input class="form-control"
                  id="ratingId"
                  type="number"
-                 formControlName="rating" [ngClass]="{'is-invalid': (customerForm.get('rating').touched ||
-                                                                      customerForm.get('rating').dirty &&
-                                                                      !customerForm.get('rating').valid)}"/>
+                 formControlName="rating"
+                 [ngClass]="{'is-invalid': (customerForm.get('rating').touched ||
+                                             customerForm.get('rating').dirty) &&
+                                             !customerForm.get('rating').valid }" />
           <span class="invalid-feedback">
             <span *ngIf="customerForm.get('rating').errors?.range">
               Please rate your experience from 1 to 5.
@@ -169,16 +162,17 @@
               <input class="form-check-input"
                      id="sendCatalogId"
                      type="checkbox"
-                     formControlName="sendCatalog"> Send me your catalog
+                     formControlName="sendCatalog">Send me your catalog
             </label>
           </div>
         </div>
       </div>
 
       <div *ngIf="customerForm.get('sendCatalog').value">
-        <div formArrayName="addresses"
-             *ngFor="let address of addresses.controls; let i = index">
-          <div [formGroupName]="i">
+        <div formArrayName="addresses">
+
+          <div [formGroupName]="i"
+               *ngFor="let address of addresses.controls; let i=index">
             <div class="form-group row mb-2">
               <label class="col-md-2 col-form-label pt-0">Address Type</label>
               <div class="col-md-8">
@@ -205,7 +199,8 @@
                     <input class="form-check-input"
                            id="addressType1Id"
                            type="radio"
-                           value="other"> Other
+                           value="other"
+                           formControlName="addressType"> Other
                   </label>
                 </div>
               </div>
@@ -216,38 +211,51 @@
                      attr.for="{{'street1Id' + i}}">Street Address 1</label>
               <div class="col-md-8">
                 <input class="form-control"
-                       id="{{'street1Id' + i}}"
-                       type="text">
+                       id="{{ 'street1Id' + i }}"
+                       type="text"
+                       placeholder="Street address (required)"
+                       formControlName="street1"
+                       [ngClass]="{'is-invalid': (address.controls.street1.touched ||
+                                                  address.controls.street1.dirty) &&
+                                                  !address.controls.street1.valid }">
+                <span class="invalid-feedback">
+                  <span *ngIf="address.controls.street1.errors?.required">
+                    Please enter your street address.
+                  </span>
+                </span>
               </div>
             </div>
 
             <div class="form-group row mb-2">
               <label class="col-md-2 col-form-label"
-                     for="street2Id">Street Address 2</label>
+                     attr.for="{{'street2Id' + i}}">Street Address 2</label>
               <div class="col-md-8">
                 <input class="form-control"
-                       id="street2Id"
-                       type="text">
+                       id="{{'street2Id' + i}}"
+                       type="text"
+                       placeholder="Street address (second line)"
+                       formControlName="street2">
               </div>
             </div>
 
             <div class="form-group row mb-2">
               <label class="col-md-2 col-form-label"
-                     for="cityId">City, State, Zip Code</label>
+                     attr.for="{{'cityId' + i}}">City, State, Zip Code</label>
               <div class="col-md-3">
                 <input class="form-control"
-                       id="cityId"
-                       type="text">
+                       id="{{'cityId' + i}}"
+                       type="text"
+                       placeholder="City"
+                       formControlName="city">
               </div>
               <div class="col-md-3">
                 <select class="form-control"
-                        id="stateId"
-                >
+                        id="{{'stateId' + i}}"
+                        formControlName="state">
                   <option value=""
                           disabled
                           selected
-                          hidden>Select a State...
-                  </option>
+                          hidden>Select a State...</option>
                   <option value="AL">Alabama</option>
                   <option value="AK">Alaska</option>
                   <option value="AZ">Arizona</option>
@@ -260,16 +268,21 @@
               </div>
               <div class="col-md-2">
                 <input class="form-control"
-                       id="zipId"
-                       type="number">
+                       id="{{'zipId' + i}}"
+                       type="number"
+                       placeholder="Zip Code"
+                       formControlName="zip">
               </div>
             </div>
           </div>
+
         </div>
-        <div class="form-group row mb-2r">
+
+        <div class="form-group row mb-2">
           <div class="col-md-4">
             <button class="btn btn-outline-primary"
                     type="button"
+                    [title]="addresses.valid ? 'Add another mailing address' : 'Disabled until the existing address data is valid'"
                     [disabled]="!addresses.valid"
                     (click)="addAddress()">
               Add Another Address
@@ -277,6 +290,7 @@
           </div>
         </div>
       </div>
+
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
           <button class="btn btn-primary mr-3"
@@ -286,7 +300,11 @@
                   [disabled]="!customerForm.valid">
             Save
           </button>
-          <button class="btn btn-secondary" (click)="populateTestData()">Test Data</button>
+          <button class="btn btn-outline-secondary"
+                  type="button"
+                  (click)="populateTestData()">
+            Test Data
+          </button>
         </div>
       </div>
     </form>
@@ -298,3 +316,4 @@
 <br>Value: {{ customerForm.value | json }}
 <br>Street: {{ addresses.get('0.street1')?.value }}
 <br>&nbsp;
+
