--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -31,6 +31,7 @@
           <th>Available</th>
           <th>Price</th>
           <th>5 Star Rating</th>
+          <th></th>
         </tr>
         </thead>
         <tbody>
@@ -51,6 +52,10 @@
           <td>
             <pm-star [rating]="product.starRating"
                      (ratingClicked)="onRatingClicked($event)"></pm-star>
+          </td>
+          <td>
+            <button class="btn btn-outline-primary" [routerLink]="[product.productId, 'edit']">Edit
+            </button>
           </td>
         </tr>
         </tbody>
