--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -47,10 +47,14 @@
   </div>
 
   <div class='card-footer'>
-    <button class='btn btn-outline-secondary'
+    <button class='btn btn-outline-secondary mr-3'
             (click)='onBack()'
             style='width:80px'>
       <i class='fa fa-chevron-left'></i> Back
+    </button>
+    <button class="btn btn-outline-primary" style="width: 80px"
+            [routerLink]="['/products', product.productId, 'edit']">
+      Edit
     </button>
   </div>
 </div>
