--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -54,7 +54,9 @@
                      (ratingClicked)="onRatingClicked($event)"></pm-star>
           </td>
           <td>
-            <button class="btn btn-outline-primary" [routerLink]="[product.productId, 'edit']">Edit
+            <button class="btn btn-outline-primary btn-sm"
+                    [routerLink]="['/products', product.productId, 'edit']">
+              Edit
             </button>
           </td>
         </tr>
