--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -12,12 +12,11 @@
 
       <div class="text-center">Developed by:</div>
       <div class="text-center">
-        <h3>CRUDs.olutions</h3>
+        <h3>CRUD.solutions</h3>
       </div>
 
-      <div class="text-center">@CRUD</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.crud.solutions</a>
+        <a href="crud.soulutions" target="_blank">www.crud.solutions</a>
       </div>
     </div>
   </div>
